--- a/style.css
+++ b/style.css
@@ -1,17 +1,98 @@
 body {
-	font-family: 'Roboto', sans-serif;
+	background: url('img/pozadina3.jpg');
+	background-repeat: repeat;
+	background-color: #FFF;
+	font-family: 'Garamond';
 	font-weight: 300;
+	color: #fff;
+	text-align: center;
+	display: flex;
+    flex-direction: column;
+	position:relative;
 }
-.fb-like {
-	position:absolute;
-	top:30%;
-	left:50%;
-	transform:translate(-50%,0);
+
+
+function myFunction() {
+    var x = document.getElementById("navigacija");
+    if (x.className === "nav") {
+        x.className += " responsive";
+    } else {
+        x.className = "nav";
+    }
 }
+
+
+.container {
+	flex: 1 0 auto;
+	
+	width: 80%;
+	
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  opacity: 0.7;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+}
+
+
 .header {
 	height: 500px;
-	background: url('img/header_bg.jpg') no-repeat;
-	background-size: cover;
+	background: url('img/header1.jpg') no-repeat;
+	background-size:cover;
+	margin-bottom: 30px;
+
+	border: 1px solid rgb(0, 0, 0); /* za browsere koji ne prepoznaju rgba */
+    border: 1px solid rgba(0, 0, 0, .5);
+    -webkit-background-clip: padding-box; /* Safari */
+    background-clip: padding-box; /* IE9+, Firefox 4+, Opera, Chrome */
 }
 .header a {
 	font-size: 24pt;
@@ -51,70 +132,12 @@ body {
 	}
 }
 
-.main-menu {
-	width: 100%;
-	background-color: #F1C40F;
-}
-.main-menu li {
-	display: inline-block;
-	height: 100px;
-	transition: 3s;
-}
-.main-menu li a {
-	color: #000;
-	font-size: 18pt;
-	padding-left: 40px;
-	padding-right: 40px;
-	line-height: 100px;
-	display: block;
-}
-.main-menu li:hover {
-	background-color: #EB5757;
-}
-.main-menu li:hover a {
-	text-decoration: none;
-	color: #fff;
-}
-
-.hamburger {
-	display: none;
-	height: 100px;
-	text-align: right;
-	padding-right: 20px;
-	background-color: #F1C40F;
-}
-
-.hamburger .glyphicon {
-	font-size: 24pt;
-	margin-top: 30px;
-	cursor: pointer;
-}
-
-@media screen and (max-width:760px) {
-	.main-menu {
-		padding: 0;
-		display: none;
-	}
-	.main-menu li {
-		display: block;
-		text-align: center;
-		width: 100%;
-	}
-	.hamburger {
-		display: block;
-	}
-}
-
-@media screen and (min-width:761px) {
-	.main-menu {
-		display: block!important
-	}
-
 .gallery img {
 	width: 100%;	
 }
 .gallery div {
 	padding: 0;
+	float:center;
 }
 
 .overlay {
@@ -128,13 +151,41 @@ body {
 	transition: 1s ease;
 }
 
+.image-container {
+	filter: grayscale(90%);
+}
 .image-container:hover .overlay {
-	opacity: 0.7;
+	opacity: 0.3;
 }
 
 .image-container:hover img {
-	filter: blur(3px);
+	filter: blur(2px);
 }
+
+.skills {
+	width: 100%;
+	background-color: #000;
+	padding: 30px 0;
+	margin: 10px 10px 80px 10px;
+	opacity: 0.7;
+}
+.skills p {
+	text-align: center;
+	font-size: 20px;
+}
+.skills li {
+	display: inline-block;
+
+}
+.skills li a {
+	color: #000;
+	font-size: 18pt;
+	padding-left: 40px;
+	padding-right: 40px;
+	line-height: 100px;
+	display: block;
+}
+
 .overlay p {
 	position: absolute;
 	top: 50%;
@@ -148,9 +199,8 @@ body {
 	text-decoration: none;
 }
 
-
 .contact-form {	
-	background-color: #F1C40F;
+	background-color: #000;
 	padding: 100px;
 }
 .contact-form h1 {
@@ -169,7 +219,7 @@ body {
 }
 .btn, .btn:hover {
 	padding: 15px 25px;
-	background-color: #000;
+	background-color: #70727F;
 	color: #fff;
 	border-radius: 0;
 }
@@ -184,18 +234,37 @@ body {
 }
 
 
-
-.footer {
-	height: 400px;
-	background: url('img/footer_bg.jpg') no-repeat;
-	background-size: cover;
+.wrapper {
+	padding-top: 0;
+	width: 110%;
 }
-.footer img {
-	margin: 100px 0 0 100px;
-}	
+.wrapper p {
+	padding: 50px 25px 25px 25px;
+	}
+	
+.footer {
+  width: 100%;
+  height: 70px;
+  padding: 10px 0 10px 0;
+  background: black;
+  color: white;
+  font-family: Garamond;
+  font-size: 22px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;          
+  left: 0;
+  opacity: 0.7;
+}
+
+.footer p {
+	text-align: center;
+	font-size: 12px;
+	padding: none;
+}
 .footer ul {
-	margin-top: 100px;
-	float: right;
+	margin-top: 0;
+	float: center;
 }
 .footer ul li {
 	display: inline-block;
@@ -209,20 +278,10 @@ body {
 	text-decoration: none;
 }
 
+
 @media screen and (max-width:760px) { 
-	.footer img {
-		width: 50%;
-		margin: 80px auto 0 auto;
-		display: block;
-	}
-	.footer ul {
-		margin: 80px 0 0 0;
-		text-align: center;
-		float: none;
-	}
-	.footer ul li {
-		display: block;
-	}
+.footer {
+		display: none;
 }
 
 .section {
@@ -280,6 +339,5 @@ body {
 	color: #F1C40F;
 	text-decoration: none;
 }
-#vegas {
-	height: 500px;
-}
+
+
